--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "acquire-bot-brad"
 version = "0.1.0"
 authors = ["Michael Alexander <beefsack@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 acquire = { git = "https://github.com/brdgme/acquire.git" }
